fixed example configs

--- a/examples/H.Pylori/helicobacter.cfg
+++ b/examples/H.Pylori/helicobacter.cfg
@@ -5,6 +5,6 @@ REF puno=references/Puno120.fasta
 
 TARGET sjm=SJM180_contigs.fasta
 
-TREE=(((els:0.02813,gambia:0.04039)0.53:0.0062,sjm:0.03027)1:0.00847,(g27:0.02536,puno:0.004809)1:0.00697);
+TREE=((sjm180:0.0400823,(gambia:0.0652494,els:0.0217168):0.0217168):0.00344596,(puno:0.064641,g27:0.0526246):0.008389);
 
 BLOCK=500
