--- a/examples/H.Pylori/helicobacter.cfg
+++ b/examples/H.Pylori/helicobacter.cfg
@@ -3,7 +3,7 @@ REF g27=references/G27.fasta
 REF gambia=references/Gambia94_24.fasta
 REF puno=references/Puno120.fasta
 
-TARGET sjm=SJM180_contigs.fasta
+TARGET sjm180=SJM180_contigs.fasta
 
 TREE=((sjm180:0.0400823,(gambia:0.0652494,els:0.0217168):0.0217168):0.00344596,(puno:0.064641,g27:0.0526246):0.008389);
 
