maf2synteny speedup, memory leaks fixed

--- a/ragout/maf2synteny/cpp_impl/Makefile
+++ b/ragout/maf2synteny/cpp_impl/Makefile
@@ -1,18 +1,21 @@
-#CPP := g++ -std=c++11 -g -D_GLIBCXX_DEBUG
-CPP := g++ -std=c++11 -O3
-CFLAGS := -c -Wall
+CPP := g++ -std=c++11
+CFLAGS := -Wall
 LDFLAGS := 
 
-.PHONY: all clean
+.PHONY: all clean debug
 
+all: CFLAGS += -O3
 all: maf2synteny
+
+debug: CFLAGS += -g -D_GLIBCXX_DEBUG -D_DEBUG
+debug: maf2synteny
 
 objects := ${patsubst %.cpp,%.o,${wildcard *.cpp}}
 maf2synteny: ${objects}
 	${CPP} ${LDFLAGS} ${objects} -o $@
 
 %.o: %.cpp *.h
-	${CPP} ${CFLAGS} $< -o $@
+	${CPP} -c ${CFLAGS} $< -o $@
 
 clean:
 	rm *.o
