cpp maf2synteny implementation incorporated + some fixes inside

--- a/ragout/maf2synteny/cpp_impl/Makefile
+++ b/ragout/maf2synteny/cpp_impl/Makefile
@@ -1,10 +1,16 @@
 CPP := g++ -std=c++11
 CFLAGS := -Wall
 LDFLAGS := 
+OUT_BIN := maf2synteny
 
-.PHONY: all clean debug
+.PHONY: all clean debug pylib pyclean
 
-all: CFLAGS += -O3
+pylib: CFLAGS += -fPIC -I${PYTHON_INCLUDE} -DPYTHON_LIB
+pylib: LDFLAGS += -shared
+pylib: OUT_BIN := ../cmaf2synteny.so
+pylib: all
+
+all: CFLAGS += -O3 -DNDEBUG
 all: maf2synteny
 
 debug: CFLAGS += -g -D_GLIBCXX_DEBUG -D_DEBUG
@@ -12,10 +18,14 @@ debug: maf2synteny
 
 objects := ${patsubst %.cpp,%.o,${wildcard *.cpp}}
 maf2synteny: ${objects}
-	${CPP} ${LDFLAGS} ${objects} -o $@
+	${CPP} ${LDFLAGS} ${objects} -o ${OUT_BIN}
 
 %.o: %.cpp *.h
 	${CPP} -c ${CFLAGS} $< -o $@
+
+pyclean:
+	rm *.o
+	rm ../cmaf2synteny.so
 
 clean:
 	rm *.o
