--- a/examples/H.Pylori/helicobacter.cfg
+++ b/examples/H.Pylori/helicobacter.cfg
@@ -5,6 +5,6 @@ REF puno=references/Puno120.fasta
 
 TARGET sjm180=SJM180_contigs.fasta
 
-TREE=((sjm180:0.0400823,(gambia:0.0652494,els:0.0217168):0.0217168):0.00344596,(puno:0.064641,g27:0.0526246):0.008389);
+TREE=(((sjm180:0.0400823,els:0.0217168):0.0344596,gambia:0.0652494):0.0217168,(puno:0.064641,g27:0.0526246):0.008389);
 
-BLOCK=500,100
+BLOCK=5000,500,100
