--- a/ragout/maf2synteny/cpp_impl/Makefile
+++ b/ragout/maf2synteny/cpp_impl/Makefile
@@ -1,20 +1,20 @@
-CFLAGS += -Wall
+CXXFLAGS += -Wall
 OUT_BIN := ${BIN_DIR}/ragout-maf2synteny
 
 .PHONY: all clean debug
 
-all: CFLAGS += -O2 -DNDEBUG
+all: CXXFLAGS += -O2 -DNDEBUG
 all: maf2synteny
 
-debug: CFLAGS += -g -D_GLIBCXX_DEBUG -D_DEBUG
+debug: CXXFLAGS += -g -D_GLIBCXX_DEBUG -D_DEBUG
 debug: maf2synteny
 
 objects := ${patsubst %.cpp,%.o,${wildcard *.cpp}}
 maf2synteny: ${objects}
-	${CPP} ${LDFLAGS} ${objects} -o ${OUT_BIN}
+	${CXX} ${LDFLAGS} ${objects} -o ${OUT_BIN}
 
 %.o: %.cpp *.h
-	${CPP} -c ${CFLAGS} $< -o $@
+	${CXX} -c ${CXXFLAGS} $< -o $@
 
 clean:
 	rm *.o
