--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 compiler:
   - gcc
   - clang
-before_script: 
-  - pip install networkx
+before_script:
+  - pip install --upgrade pip
+  - pip install --user networkx
 script: make; make dependencies; make test
