fix another permission error during travis-ci run

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ compiler:
   - gcc
   - clang
 before_script:
-  - pip install --upgrade pip
+  - pip install --upgrade --user pip
   - pip install --user networkx
 script: make; make dependencies; make test
