--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ compiler:
   - clang
 before_script:
   - pip install --upgrade --user pip
-  - pip install --user networkx
+  - pip install --user networkx==2.2
+  - pip3 install --upgrade --user pip
+  - pip3 install --user networkx==2.2
 script: 
   - make; make dependencies
   - python2 scripts/run-tests.py
