--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
-language: cpp
+language: python
+python:
+  - "2.7"
+  - "3.6"
+
 compiler:
   - gcc
   - clang
+
 before_script:
   - pip install --upgrade --user pip
   - pip install --user networkx==2.2
-  - pip3 install --upgrade --user pip
-  - pip3 install --user networkx==2.2
+
 script: 
   - make; make dependencies
-  - python2 scripts/run-tests.py
-  - python3 scripts/run-tests.py
+  - python scripts/run-tests.py
