--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ compiler:
   - clang
 
 before_script:
-  - pip install --user networkx==2.2
+  - pip install networkx==2.2
 
 script: 
   - make; make dependencies
